--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta name="apple-itunes-app" content="app-id=643294733, app-argument='https://apps.apple.com/us/app/wheresgay/id643294733?itsct=apps_box_link&itscg=30200'">
+<meta name="apple-itunes-app" content="app-id=643294733">
 <html>
 <body>
 
