--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta name="apple-itunes-app" content="app-id=643294733">
+<meta name="apple-itunes-app" content="app-id=id643294733">
 <html>
 <body>
 
