--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <meta name="apple-itunes-app" content="app-id=643294733">
+  <head><meta name="apple-itunes-app" content="app-id=id643294733"></head>
 <body>
 
 <h1>Hello World</h1>
