--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <meta name="apple-itunes-app" content="app-id=399791956">
 <body>
 
-<h1>Hello World</h1>
-<p>How are you doing?.</p>
+<h1>I exploring Smart App Banners</h1>
+<p>If I did it correctly, then you should see a banner on top of an app that you can either download (if you didn't already) or open if you downloaded it before.</p>
 
 </body>
 </html>
