--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="apple-itunes-app" content="app-id=399791956">
 <body>
 
-<h1>I exploring Smart App Banners</h1>
+<h1>I'm exploring Smart App Banners</h1>
 <p>If I did it correctly, then you should see a banner on top of an app that you can either download (if you didn't already) or open if you downloaded it before.</p>
 
 </body>
